// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntegrationsList /> SMS integrations feature flag should include SMS tile SMS preview accounts 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Integrations
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="mb-4 row"
    >
      <div
        class="col-md-10"
      >
        <p>
          Gorgias is most useful when you connect it to other applications. Integrations let you communicate with customers through multiple channels, pull more information about them and perform actions in outside tools directly from Gorgias.
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <a
          class="component link card d-flex flex-row align-items-center"
          to="/app/settings/integrations/sms/integrations"
        >
          <div
            class="icon d-flex align-items-center justify-content-center"
          >
            <img
              alt="SMS logo"
              class="logo"
              role="presentation"
              src="test-file-stub"
            />
          </div>
          <div
            class="flex-grow mr-1"
          >
            <div
              class="d-flex align-items-start"
            >
              <h5
                class="title"
              >
                SMS
              </h5>
            </div>
            this is a cool integration
          </div>
          <div
            class="action"
          >
            <span
              class="connected"
            >
              1
               active
            </span>
            <i
              class="material-icons md-1"
            >
              navigate_next
            </i>
          </div>
        </a>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 150px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
        <div
          class="mt-3"
        >
          Loading additionnal Apps...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntegrationsList /> SMS integrations feature flag should not include SMS tile for all other accounts 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Integrations
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="mb-4 row"
    >
      <div
        class="col-md-10"
      >
        <p>
          Gorgias is most useful when you connect it to other applications. Integrations let you communicate with customers through multiple channels, pull more information about them and perform actions in outside tools directly from Gorgias.
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <a
          class="component link card d-flex flex-row align-items-center"
          to="/app/settings/integrations/http"
        >
          <div
            class="icon d-flex align-items-center justify-content-center"
          >
            <img
              alt="an integration logo"
              class="logo"
              role="presentation"
              src="test-file-stub"
            />
          </div>
          <div
            class="flex-grow mr-1"
          >
            <div
              class="d-flex align-items-start"
            >
              <h5
                class="title"
              >
                an integration
              </h5>
            </div>
            this is a cool integration
          </div>
          <div
            class="action"
          >
            <span
              class="connected"
            >
              1
               active
            </span>
            <i
              class="material-icons md-1"
            >
              navigate_next
            </i>
          </div>
        </a>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 150px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
        <div
          class="mt-3"
        >
          Loading additionnal Apps...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntegrationsList /> should display content 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Integrations
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="mb-4 row"
    >
      <div
        class="col-md-10"
      >
        <p>
          Gorgias is most useful when you connect it to other applications. Integrations let you communicate with customers through multiple channels, pull more information about them and perform actions in outside tools directly from Gorgias.
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <a
          class="component link card d-flex flex-row align-items-center"
          to="/app/settings/integrations/http"
        >
          <div
            class="icon d-flex align-items-center justify-content-center"
          >
            <img
              alt="an integration logo"
              class="logo"
              role="presentation"
              src="test-file-stub"
            />
          </div>
          <div
            class="flex-grow mr-1"
          >
            <div
              class="d-flex align-items-start"
            >
              <h5
                class="title"
              >
                an integration
              </h5>
            </div>
            this is a cool integration
          </div>
          <div
            class="action"
          >
            <span
              class="connected"
            >
              1
               active
            </span>
            <i
              class="material-icons md-1"
            >
              navigate_next
            </i>
          </div>
        </a>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 150px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
        <div
          class="mt-3"
        >
          Loading additionnal Apps...
        </div>
      </div>
    </div>
  </div>
</div>
`;
